Fixed timepickr to show images that were not before. Changed the overal pag width and made the page background white again Fixed menu bar alignment Included ReSharper in the project-useful tool for visual studio

--- a/Eyedentify/Styles/STL_Site.css
+++ b/Eyedentify/Styles/STL_Site.css
@@ -228,7 +228,7 @@ div.hideSkiplink
 { 
     font-family:Helvetica;
     height: 46px;
-    margin: 0px 0px 0px 20px;
+    margin-left: -10px;
     padding: 0px 0 0 0px;
 
 } 
